gitops/apps/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    ingress.apex-sync.io/public-gateway-access: "true"
