gitops/apps/argocd/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server-http-redirect
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: istio-ingress
      sectionName: http-wildcard
  hostnames:
    - "argocd.${ARGOCD_ENV_base_domain}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: istio-ingress
      sectionName: https-wildcard
  hostnames:
    - "argocd.${ARGOCD_ENV_base_domain}"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
